# ralo

./: .env.default  Cargo.toml
agent/: Cargo.toml
agent/src/: agent.rs  env.rs  lib.rs  main.rs  state.rs
agent/src/algorithm/: common.rs  mock.rs  mod.rs
agent/src/history/: mod.rs
agent/src/trade/: auto_approval.rs  mock.rs  mod.rs
discord/: Cargo.toml
discord/src/: common.rs  main.rs
discord/src/command/: history.rs  mod.rs  world.rs
ralo-core/: Cargo.toml
ralo-core/src/: lib.rs  log.rs
ralo-core/src/entity/: symbol.rs
ralo-core/src/service/: backtest.rs
ralo-core/src/utils/: env.rs
