[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serenity = { version = "0.12" }
tokio = { version = "1.38.0", features = ["full"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }
futures = { version = "0.3.13", default-features = false }
futures-util = { version = "0.3.13", default-features = false }
rand = { version = "0.8.5" }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = { version = "1.0.59" }
itertools = { version = "0.13.0" }
dotenv = { version = "0.15.0" }
axum = { version = "0.7.4" }
postgrest = { version = "1.6.0" }
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
void = "1.0.2"
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
core = { path = "../core" }
