[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/bin/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.38.0", features = ["full"] }
futures = { version = "0.3.13", default-features = false }
futures-util = { version = "0.3.13", default-features = false }
rand = { version = "0.8.5" }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = { version = "1.0.59" }
itertools = { version = "0.13.0" }
dotenv = { version = "0.15.0" }
axum = { version = "0.7.4" }
postgrest = { version = "1.6.0" }
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
void = "1.0.2"
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lazy_static = "1.5.0"

binance-rs-async = { version = "1.3.3", features = ["all_apis", "default"] }
serenity = { version = "0.12" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }

ralo-core = { path = "../ralo-core" }
